--- a/server/.env
+++ b/server/.env
@@ -8,7 +8,7 @@ JWT_REFRESH_EXPIRATION=7d
 # Email Config
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
+SMTP_USER=your-+@gmail.com
 SMTP_PASS=your-app-password
 FROM_EMAIL=noreply@prayerrealm.com
 
