--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^25.3.0",
+    "@types/nodemailer": "^7.0.11",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
